@@ -109,6 +109,21 @@
                             </options>
                         </configuration>
                     </execution>
+                    <execution>
+                        <!-- Default configuration for running -->
+                        <!-- Usage: mvn clean javafx:run -->
+                        <id>debug</id>
+                        <configuration>
+                            <mainClass>org.sqlg.ui.App</mainClass>
+                            <options>
+                                <option>--enable-preview</option>
+                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
+                                <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
+                                <option>--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8001</option>
+                            </options>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
             <plugin>
